Added Product Slider

--- a/Front/index.html
+++ b/Front/index.html
@@ -499,23 +499,33 @@
 
                 <div class="trendy-product-list">
 
+
                     <div class="trendy-product">
 
                         <div class="product-image">
-                            <img src="/cilent/assets/images/products/product.jpg" alt="">
-                            <a href="#">ADD TO CART</a>
+                            <a class="prod-img" href="#">
+                                <img src="/cilent/assets/images/products/product.jpg" alt="">
+                            </a>
+
+                            <a class="prod-add" href="#">ADD TO CART</a>
                         </div>
 
                         <div class="product-info">
                             <div class="product-name">
-                                <a href="#">Category</a>
-                                <a href="#">Product Name</a>
-                                <p>$100</p>
+                                <a class="prod-cat" href="#">Category</a>
+                                <a class="prod-name" href="#">Product Name</a>
+                                <!-- <span class="dis-price">$80 <del class="sel-price">100</del></span> -->
+                                <span class="sell-price">$80</span>
                             </div>
 
-                            <img src="" alt="">
+                            <a class="wish" href="#">
+                                <img src="/cilent/assets/icons/wish-icon.svg" alt="">
+                            </a>
+
                             <!-- active wish icon -->
-                            <img src="" alt="">
+                            <!-- <a class="wish a" href="#">
+                                <img src="/cilent/assets/icons/wish-icon-active.svg" alt="">
+                            </a> -->
                         </div>
 
                     </div>
@@ -523,20 +533,29 @@
                     <div class="trendy-product">
 
                         <div class="product-image">
-                            <img src="/cilent/assets/images/products/product.jpg" alt="">
-                            <a href="#">ADD TO CART</a>
+                            <a class="prod-img" href="#">
+                                <img src="/cilent/assets/images/products/product.jpg" alt="">
+                            </a>
+
+                            <a class="prod-add" href="#">ADD TO CART</a>
                         </div>
 
                         <div class="product-info">
                             <div class="product-name">
-                                <a href="#">Category</a>
-                                <a href="#">Product Name</a>
-                                <p>$100</p>
+                                <a class="prod-cat" href="#">Category</a>
+                                <a class="prod-name" href="#">Product Name</a>
+                                <span class="dis-price">$80 <del class="sel-price">100</del></span>
+                                <!-- <span class="sell-price">$80</span> -->
                             </div>
 
-                            <img src="" alt="">
+                            <a class="wish" href="#">
+                                <img src="/cilent/assets/icons/wish-icon.svg" alt="">
+                            </a>
+
                             <!-- active wish icon -->
-                            <img src="" alt="">
+                            <!-- <a class="wish a" href="#">
+                                <img src="/cilent/assets/icons/wish-icon-active.svg" alt="">
+                            </a> -->
                         </div>
 
                     </div>
@@ -544,20 +563,29 @@
                     <div class="trendy-product">
 
                         <div class="product-image">
-                            <img src="/cilent/assets/images/products/product.jpg" alt="">
-                            <a href="#">ADD TO CART</a>
+                            <a class="prod-img" href="#">
+                                <img src="/cilent/assets/images/products/product.jpg" alt="">
+                            </a>
+
+                            <a class="prod-add" href="#">ADD TO CART</a>
                         </div>
 
                         <div class="product-info">
                             <div class="product-name">
-                                <a href="#">Category</a>
-                                <a href="#">Product Name</a>
-                                <p>$100</p>
+                                <a class="prod-cat" href="#">Category</a>
+                                <a class="prod-name" href="#">Product Name</a>
+                                <!-- <span class="dis-price">$80 <del class="sel-price">100</del></span> -->
+                                <span class="sell-price">$80</span>
                             </div>
 
-                            <img src="" alt="">
+                            <a class="wish" href="#">
+                                <img src="/cilent/assets/icons/wish-icon.svg" alt="">
+                            </a>
+
                             <!-- active wish icon -->
-                            <img src="" alt="">
+                            <!-- <a class="wish a" href="#">
+                                <img src="/cilent/assets/icons/wish-icon-active.svg" alt="">
+                            </a> -->
                         </div>
 
                     </div>
@@ -565,20 +593,29 @@
                     <div class="trendy-product">
 
                         <div class="product-image">
-                            <img src="/cilent/assets/images/products/product.jpg" alt="">
-                            <a href="#">ADD TO CART</a>
+                            <a class="prod-img" href="#">
+                                <img src="/cilent/assets/images/products/product.jpg" alt="">
+                            </a>
+
+                            <a class="prod-add" href="#">ADD TO CART</a>
                         </div>
 
                         <div class="product-info">
                             <div class="product-name">
-                                <a href="#">Category</a>
-                                <a href="#">Product Name</a>
-                                <p>$100</p>
+                                <a class="prod-cat" href="#">Category</a>
+                                <a class="prod-name" href="#">Product Name</a>
+                                <!-- <span class="dis-price">$80 <del class="sel-price">100</del></span> -->
+                                <span class="sell-price">$80</span>
                             </div>
 
-                            <img src="" alt="">
+                            <a class="wish" href="#">
+                                <img src="/cilent/assets/icons/wish-icon.svg" alt="">
+                            </a>
+
                             <!-- active wish icon -->
-                            <img src="" alt="">
+                            <!-- <a class="wish a" href="#">
+                                <img src="/cilent/assets/icons/wish-icon-active.svg" alt="">
+                            </a> -->
                         </div>
 
                     </div>
@@ -586,20 +623,29 @@
                     <div class="trendy-product">
 
                         <div class="product-image">
-                            <img src="/cilent/assets/images/products/product.jpg" alt="">
-                            <a href="#">ADD TO CART</a>
+                            <a class="prod-img" href="#">
+                                <img src="/cilent/assets/images/products/product.jpg" alt="">
+                            </a>
+
+                            <a class="prod-add" href="#">ADD TO CART</a>
                         </div>
 
                         <div class="product-info">
                             <div class="product-name">
-                                <a href="#">Category</a>
-                                <a href="#">Product Name</a>
-                                <p>$100</p>
+                                <a class="prod-cat" href="#">Category</a>
+                                <a class="prod-name" href="#">Product Name</a>
+                                <!-- <span class="dis-price">$80 <del class="sel-price">100</del></span> -->
+                                <span class="sell-price">$80</span>
                             </div>
 
-                            <img src="" alt="">
+                            <a class="wish" href="#">
+                                <img src="/cilent/assets/icons/wish-icon.svg" alt="">
+                            </a>
+
                             <!-- active wish icon -->
-                            <img src="" alt="">
+                            <!-- <a class="wish a" href="#">
+                                <img src="/cilent/assets/icons/wish-icon-active.svg" alt="">
+                            </a> -->
                         </div>
 
                     </div>
@@ -607,20 +653,29 @@
                     <div class="trendy-product">
 
                         <div class="product-image">
-                            <img src="/cilent/assets/images/products/product.jpg" alt="">
-                            <a href="#">ADD TO CART</a>
+                            <a class="prod-img" href="#">
+                                <img src="/cilent/assets/images/products/product.jpg" alt="">
+                            </a>
+
+                            <a class="prod-add" href="#">ADD TO CART</a>
                         </div>
 
                         <div class="product-info">
                             <div class="product-name">
-                                <a href="#">Category</a>
-                                <a href="#">Product Name</a>
-                                <p>$100</p>
+                                <a class="prod-cat" href="#">Category</a>
+                                <a class="prod-name" href="#">Product Name</a>
+                                <!-- <span class="dis-price">$80 <del class="sel-price">100</del></span> -->
+                                <span class="sell-price">$80</span>
                             </div>
 
-                            <img src="" alt="">
+                            <a class="wish" href="#">
+                                <img src="/cilent/assets/icons/wish-icon.svg" alt="">
+                            </a>
+
                             <!-- active wish icon -->
-                            <img src="" alt="">
+                            <!-- <a class="wish a" href="#">
+                                <img src="/cilent/assets/icons/wish-icon-active.svg" alt="">
+                            </a> -->
                         </div>
 
                     </div>
@@ -628,68 +683,34 @@
                     <div class="trendy-product">
 
                         <div class="product-image">
-                            <img src="/cilent/assets/images/products/product.jpg" alt="">
-                            <a href="#">ADD TO CART</a>
+                            <a class="prod-img" href="#">
+                                <img src="/cilent/assets/images/products/product.jpg" alt="">
+                            </a>
+
+                            <a class="prod-add" href="#">ADD TO CART</a>
                         </div>
 
                         <div class="product-info">
                             <div class="product-name">
-                                <a href="#">Category</a>
-                                <a href="#">Product Name</a>
-                                <p>$100</p>
+                                <a class="prod-cat" href="#">Category</a>
+                                <a class="prod-name" href="#">Product Name</a>
+                                <!-- <span class="dis-price">$80 <del class="sel-price">100</del></span> -->
+                                <span class="sell-price">$80</span>
                             </div>
 
-                            <img src="" alt="">
+                            <a class="wish" href="#">
+                                <img src="/cilent/assets/icons/wish-icon.svg" alt="">
+                            </a>
+
                             <!-- active wish icon -->
-                            <img src="" alt="">
-                        </div>
-
-                    </div>
-
-                    <div class="trendy-product">
-
-                        <div class="product-image">
-                            <img src="/cilent/assets/images/products/product.jpg" alt="">
-                            <a href="#">ADD TO CART</a>
-                        </div>
-
-                        <div class="product-info">
-                            <div class="product-name">
-                                <a href="#">Category</a>
-                                <a href="#">Product Name</a>
-                                <p>$100</p>
-                            </div>
-
-                            <img src="" alt="">
-                            <!-- active wish icon -->
-                            <img src="" alt="">
-                        </div>
-
-                    </div>
-
-                    <div class="trendy-product">
-
-                        <div class="product-image">
-                            <img src="/cilent/assets/images/products/product.jpg" alt="">
-                            <a href="#">ADD TO CART</a>
-                        </div>
-
-                        <div class="product-info">
-                            <div class="product-name">
-                                <a href="#">Category</a>
-                                <a href="#">Product Name</a>
-                                <p>$100</p>
-                            </div>
-
-                            <img src="" alt="">
-                            <!-- active wish icon -->
-                            <img src="" alt="">
+                            <!-- <a class="wish a" href="#">
+                                <img src="/cilent/assets/icons/wish-icon-active.svg" alt="">
+                            </a> -->
                         </div>
 
                     </div>
 
 
-                    
                 </div>
             </div>
 
