--- a/Front/index.html
+++ b/Front/index.html
@@ -534,7 +534,7 @@
 
                         <div class="product-image">
                             <a class="prod-img" href="#">
-                                <img src="/cilent/assets/images/products/product.jpg" alt="">
+                                <img src="/cilent/assets/images/products/slider.png" alt="">
                             </a>
 
                             <a class="prod-add" href="#">ADD TO CART</a>
