Added Login Page

--- a/Front/index.html
+++ b/Front/index.html
@@ -9,11 +9,15 @@
     <link rel="stylesheet" href="/cilent/assets/css/swiper-bundle.min.css">
 
     <link rel="stylesheet" href="/cilent/assets/css/index.css">
+    <link rel="stylesheet" href="/cilent/assets/css/home.css">
     <title>Vanguard</title>
 </head>
 
 <body>
 
+    <!-- ================================
+        HEADER    -    START
+===================================== -->
     <header>
 
         <div class="header-info">
@@ -520,7 +524,7 @@
 
                     <div class="basket-buttons">
                         <a class="basket-viewcart" href="#">VIEW CART</a>
-                     <a class="basket-checkout" href="#">CHECKOUT</a> 
+                        <a class="basket-checkout" href="#">CHECKOUT</a>
                     </div>
                 </div>
 
@@ -533,7 +537,7 @@
                     <li><a href="#">Basket</a></li>
                     <li><a href="#">Wish List</a></li>
                     <li><a href="#">Log Out</a></li>
-                    <li><a href="#">Login</a></li>
+                    <li><a href="/login.html">Login</a></li>
                     <li><a href="#">Register</a></li>
                 </ul>
                 <h4><a class="go-admin" href="#">Go To Admin</a></h4>
@@ -673,7 +677,7 @@
                     <li><a href="/cilent/contact.php">Wish List</a></li>
                     <li><a href="/cilent/contact.php">My Account </a></li>
                     <li><a href="/cilent/contact.php">Log Out</a></li>
-                    <li><a href="/cilent/contact.php">Login</a></li>
+                    <li><a href="login.html">Login</a></li>
                     <li><a href="/cilent/contact.php">Register</a></li>
                 </ul>
             </nav>
@@ -681,6 +685,9 @@
         </div>
 
     </header>
+    <!-- ================================
+        HEADER    -    END
+===================================== -->
 
     <!-- ================================
         MAIN    -    START
@@ -4087,6 +4094,10 @@
     <!-- ================================
         MAIN    -    END
 ===================================== -->
+
+    <!-- ================================
+        FOOTER    -    START
+===================================== -->
     <footer>
 
         <div class="footer-top">
@@ -4187,11 +4198,13 @@
         </div>
 
     </footer>
-
+    <!-- ================================
+        FOOTER    -    END
+===================================== -->
+    <!-- Link Swiper's CSS -->
     <script src="/cilent/assets/js/swiper-bundle.min.js"></script>
     <script src="/cilent/assets/js/index.js"></script>
-
-    <!-- Link Swiper's CSS -->
+    <script src="/cilent/assets/js/home.js"></script>
 
 </body>
 
