--- a/Front/index.html
+++ b/Front/index.html
@@ -30,17 +30,17 @@
 
                 <nav class="pages-pc">
                     <ul>
-                        <li><a href="/cilent/index.php">Home</a></li>
+                        <li><a href="/index.html">Home</a></li>
                         <li><a href="/cilent/about.php">About</a></li>
                         <li><a href="/cilent/contact.php">Blog</a></li>
-                        <li><a href="/cilent/contact.php">Contact</a></li>
+                        <li><a href="/contact.html">Contact</a></li>
                     </ul>
                 </nav>
 
             </div>
 
             <div class="brand-logo">
-                <a href="/cilent/index.php">VANGUARD</a>
+                <a href="/index.html">VANGUARD</a>
             </div>
 
             <div class="header-icons">
@@ -538,7 +538,7 @@
                     <li><a href="#">Wish List</a></li>
                     <li><a href="#">Log Out</a></li>
                     <li><a href="/login.html">Login</a></li>
-                    <li><a href="#">Register</a></li>
+                    <li><a href="/register.html">Register</a></li>
                 </ul>
                 <h4><a class="go-admin" href="#">Go To Admin</a></h4>
             </div>
@@ -672,13 +672,13 @@
                     <li><a href="/cilent/index.php">Home</a></li>
                     <li><a href="/cilent/about.php">About</a></li>
                     <li><a href="/cilent/contact.php">Blog</a></li>
-                    <li><a href="/cilent/contact.php">Contact</a></li>
+                    <li><a href="/contact.html">Contact</a></li>
                     <li><a href="/cilent/contact.php">Basket</a></li>
                     <li><a href="/cilent/contact.php">Wish List</a></li>
                     <li><a href="/cilent/contact.php">My Account </a></li>
                     <li><a href="/cilent/contact.php">Log Out</a></li>
                     <li><a href="login.html">Login</a></li>
-                    <li><a href="/cilent/contact.php">Register</a></li>
+                    <li><a href="/register.html">Register</a></li>
                 </ul>
             </nav>
 
@@ -4098,106 +4098,116 @@
     <!-- ================================
         FOOTER    -    START
 ===================================== -->
-    <footer>
+<footer>
 
-        <div class="footer-top">
+    <div class="footer-top">
 
-            <div class="brand-info">
+        <div class="brand-info">
 
-                <h1>VANGUARD</h1>
+            <h1>VANGUARD</h1>
 
-                <div class="contact">
+            <div class="contact">
 
-                    <div class="brand-ad">
-                        <img src="/cilent/assets/icons/location.svg" alt="logo">
-                        <a href="#">Address: Your address</a>
-                    </div>
-                    <div class="brand-ad">
-                        <img src="/cilent/assets/icons/mail.svg" alt="logo">
-                        <a href="#">vanguard@gmail.az</a>
-                    </div>
-                    <div class="brand-ad">
-                        <img src="/cilent/assets/icons/phone.svg" alt="logo">
-                        <a href="#">+994 50 710 10 15</a>
-                    </div>
 
+
+
+
+                <div class="brand-ad">
+                    <img src="/cilent/assets/icons/location.svg"  alt="logo">
+                    <a>Port Baku Mall, 151 Neftchilar Avenue, Baku</a>
                 </div>
 
-                <div class="social-platforms">
-                    <a href="#"><img src="/cilent/assets/icons/facebook.svg" alt="facebook"></a>
-                    <a href="#"><img src="/cilent/assets/icons/instagram.svg" alt="instagram"></a>
-                    <a href="#"><img src="/cilent/assets/icons/twitter-x.svg" alt="twitter"></a>
-                    <a href="#"><img src="/cilent/assets/icons/linkedin.svg" alt="linkedin"></a>
-                    <a href="#"><img src="/cilent/assets/icons/whatsapp.svg" alt="whatsapp"></a>
-                </div>
-            </div>
-
-            <div class="web-info">
-
-                <div class="info-list">
-                    <h3>COMPANY</h1>
-
-                        <ul>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Contact Us</a></li>
-                        </ul>
+                <div class="brand-ad">
+                    <img src="/cilent/assets/icons/mail.svg"  alt="logo">
+                    <a href="mailto:vanguardfashionaz@gmail.com" target="_blank">vanguardfashionaz@gmail.com</a>
                 </div>
 
-                <div class="info-list">
-                    <h3>HELP</h1>
-
-                        <ul>
-                            <li><a href="#">My Account</a></li>
-                            <li><a href="#">Find a Store</a></li>
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Legal & Privacy</a></li>
-                            <li><a href="#">Contact</a></li>
-                            <li><a href="#">Gift Card</a></li>
-                        </ul>
+                <div class="brand-ad">
+                    <img src="/cilent/assets/icons/phone.svg"  alt="logo">
+                    <a href="tel:+994507101015" target="_blank">+994507101015</a>
                 </div>
-
-                <!-- <div class="info-list">
-                    <h3>HELP</h1>
-
-                        <ul>
-                            <li><a href="#">My Account</a></li>
-                            <li><a href="#">Find a Store</a></li>
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Legal & Privacy</a></li>
-                            <li><a href="#">Contact</a></li>
-                            <li><a href="#">Gift Card</a></li>
-                        </ul>
-                </div> -->
 
             </div>
 
-            <div class="subscribe">
-
-                <h3>Subscribe</h3>
-
-                <form class="subscribe-form">
-                    <p>Be the first to get the latest news about trends, promotions, and much more!</p>
-                    <input type="email" placeholder="Enter your email">
-                    <div>
-                        <button type="submit" href="#">JOIN</button>
-                    </div>
-                </form>
-            </div>
-
-        </div>
-
-        <div class="footer-bottom">
-
-            <p>© 2024 Clothing. Made with by<a href="#">: Tamerlan Aliyev</a></p>
-
-            <div class="payments">
-                <img src="/cilent/assets/icons/visa.svg" alt="visa">
-                <img src="/cilent/assets/icons/master.svg" alt="master">
+            <div class="social-platforms">
+                <a href="https://www.facebook.com/profile.php?id=61550959731138" target="_blank"><img
+                        src="/cilent/assets/icons/facebook.svg" alt="facebook"></a>
+                <a href="https://www.instagram.com/vanguard.az/" target="_blank"><img src="/cilent/assets/icons/instagram.svg"
+                        alt="instagram"></a>
+                <a href="#" target="_blank"><img src="/cilent/assets/icons/twitter-x.svg" alt="twitter"></a>
+                <a href="https://www.linkedin.com/in/tamerlan-aliyev-74a693284/" target="_blank"><img
+                        src="/cilent/assets/icons/linkedin.svg" alt="linkedin"></a>
+                <a href="https://wa.me/994507101015" target="_blank"><img src="/cilent/assets/icons/whatsapp.svg"
+                        alt="whatsapp"></a>
             </div>
         </div>
 
-    </footer>
+        <div class="web-info">
+
+            <div class="info-list">
+                <h3>COMPANY</h1>
+
+                    <ul>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                    </ul>
+            </div>
+
+            <div class="info-list">
+                <h3>HELP</h1>
+
+                    <ul>
+                        <li><a href="#">My Account</a></li>
+                        <li><a href="#">Find a Store</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Legal & Privacy</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">Gift Card</a></li>
+                    </ul>
+            </div>
+
+            <!-- <div class="info-list">
+                <h3>HELP</h1>
+
+                    <ul>
+                        <li><a href="#">My Account</a></li>
+                        <li><a href="#">Find a Store</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Legal & Privacy</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">Gift Card</a></li>
+                    </ul>
+            </div> -->
+
+        </div>
+
+        <div class="subscribe">
+
+            <h3>Subscribe</h3>
+
+            <form class="subscribe-form">
+                <p>Be the first to get the latest news about trends, promotions, and much more!</p>
+                <input type="email" placeholder="Enter your email">
+                <div>
+                    <button type="submit" href="#">JOIN</button>
+                </div>
+            </form>
+        </div>
+
+    </div>
+
+    <div class="footer-bottom">
+
+        <p>© 2024 Clothing. Made with by<a href="#">: Tamerlan Aliyev</a></p>
+
+        <div class="payments">
+            <img src="/cilent/assets/icons/visa.svg" alt="visa">
+            <img src="/cilent/assets/icons/master.svg" alt="master">
+        </div>
+    </div>
+
+</footer>
     <!-- ================================
         FOOTER    -    END
 ===================================== -->
